--- a/Practice Directory/css/style.css
+++ b/Practice Directory/css/style.css
@@ -1,11 +1,11 @@
-script {margin-top: 100px;
-   margin-bottom: 100px;
-   margin-right: 100px;
-   margin-left: 100px;
+*{
+   font-family: "Verdana";
+   margin: 10px;
+   max-width: 1000px;
+   color: black;
+   background-color: lightgray;
 }
 
-script.container{
-   width: 500px;
-   height: 500px;
-   overflow: hidden;
+input {
+   font-size: 15px;
 }
